[package]
name = "pest-ik"
version = "0.1.0"
authors = ["zxj5470 <zxj5470@foxmail.com>"]
edition = "2018"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
llvm-sys = "70"

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[profile.test]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1